Fixed horizontal scrolling in projects

--- a/css/common.css
+++ b/css/common.css
@@ -28,5 +28,6 @@ html, body {
 }
 
 .yt-frame {
-    margin-right: 1rem;
+    margin-left: 1.4rem;
+    margin-right: 1.4rem;
 }
